--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
 
 <script>
   const dashUrls = [
-"cg_cinemax.mpd",
-"cg_cnnhd.mpd"
-"cg_hbofam.mpd"
-"cg_hbohd.mpd"
-"cg_hbohits.mpd"
-"cg_hbohits.mpd"
-"cg_hbosign.mpd"
-"cg_onesports.mpd"
-"cg_onesports+HD.mpd"
-"cg_tagalogmovie.mpd"
-"cg_warnerhd.mpd"
-"chanel2.mpd"
-"cinemo-dash-abscbn.mpd"
-"Gtv.mpd"
-"nickelodeonHD.mpd"
-"OneNews.mpd"
-"OnePH.mpd"
-"PBOsd.mpd"
-"PbaRush.mpd"
-"TopAction_flix.mpd"
-"TV5.mpd"
-"warnerHD.mpd"
+"./cg_cinemax.mpd",
+"./cg_cnnhd.mpd"
+"./cg_hbofam.mpd"
+"./cg_hbohd.mpd"
+"./cg_hbohits.mpd"
+"./cg_hbohits.mpd"
+"./cg_hbosign.mpd"
+"./cg_onesports.mpd"
+"./cg_onesports+HD.mpd"
+"./cg_tagalogmovie.mpd"
+"./cg_warnerhd.mpd"
+"./chanel2.mpd"
+"./cinemo-dash-abscbn.mpd"
+"./Gtv.mpd"
+"./nickelodeonHD.mpd"
+"./OneNews.mpd"
+"./OnePH.mpd"
+"./PBOsd.mpd"
+"./PbaRush.mpd"
+"./TopAction_flix.mpd"
+"./TV5.mpd"
+"./warnerHD.mpd"
   ];
 
   const ytQueue = [
