--- a/index.html
+++ b/index.html
@@ -58,28 +58,31 @@
 
 <script>
   const dashUrls = [
-"https://tv-puce-rho.vercel.app/cg_cinemax.mpd",
-"https://tv-puce-rho.vercel.app/cg_cnnhd.mpd"
-"https://tv-puce-rho.vercel.app/cg_hbofam.mpd"
-"https://tv-puce-rho.vercel.app/cg_hbohd.mpd"
-"https://tv-puce-rho.vercel.app/cg_hbohits.mpd"
-"https://tv-puce-rho.vercel.app/cg_hbohits.mpd"
-"https://tv-puce-rho.vercel.app/cg_hbosign.mpd"
-"https://tv-puce-rho.vercel.app/cg_onesports.mpd"
-"https://tv-puce-rho.vercel.app/cg_onesports+HD.mpd"
-"https://tv-puce-rho.vercel.app/cg_tagalogmovie.mpd"
-"https://tv-puce-rho.vercel.app/cg_warnerhd.mpd"
-"https://tv-puce-rho.vercel.app/chanel2.mpd"
-"https://tv-puce-rho.vercel.app/cinemo-dash-abscbn.mpd"
-"https://tv-puce-rho.vercel.app/Gtv.mpd"
-"https://tv-puce-rho.vercel.app/nickelodeonHD.mpd"
-"https://tv-puce-rho.vercel.app/OneNews.mpd"
-"https://tv-puce-rho.vercel.app/OnePH.mpd"
-"https://tv-puce-rho.vercel.app/PBOsd.mpd"
-"https://tv-puce-rho.vercel.app/PbaRush.mpd"
-"https://tv-puce-rho.vercel.app/TopAction_flix.mpd"
-"https://tv-puce-rho.vercel.app/TV5.mpd"
-"https://tv-puce-rho.vercel.app/warnerHD.mpd"
+const dashUrls = [
+  "https://tv-puce-rho.vercel.app/cg_cinemax.mpd",
+  "https://tv-puce-rho.vercel.app/cg_cnnhd.mpd",
+  "https://tv-puce-rho.vercel.app/cg_hbofam.mpd",
+  "https://tv-puce-rho.vercel.app/cg_hbohd.mpd",
+  "https://tv-puce-rho.vercel.app/cg_hbohits.mpd",
+  "https://tv-puce-rho.vercel.app/cg_hbohits.mpd",
+  "https://tv-puce-rho.vercel.app/cg_hbosign.mpd",
+  "https://tv-puce-rho.vercel.app/cg_onesports.mpd",
+  "https://tv-puce-rho.vercel.app/cg_onesports+HD.mpd",
+  "https://tv-puce-rho.vercel.app/cg_tagalogmovie.mpd",
+  "https://tv-puce-rho.vercel.app/cg_warnerhd.mpd",
+  "https://tv-puce-rho.vercel.app/chanel2.mpd",
+  "https://tv-puce-rho.vercel.app/cinemo-dash-abscbn.mpd",
+  "https://tv-puce-rho.vercel.app/Gtv.mpd",
+  "https://tv-puce-rho.vercel.app/nickelodeonHD.mpd",
+  "https://tv-puce-rho.vercel.app/OneNews.mpd",
+  "https://tv-puce-rho.vercel.app/OnePH.mpd",
+  "https://tv-puce-rho.vercel.app/PBOsd.mpd",
+  "https://tv-puce-rho.vercel.app/PbaRush.mpd",
+  "https://tv-puce-rho.vercel.app/TopAction_flix.mpd",
+  "https://tv-puce-rho.vercel.app/TV5.mpd",
+  "https://tv-puce-rho.vercel.app/warnerHD.mpd"
+
+
   ];
 
   const ytQueue = [
