--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TVPHAtp - Unified Player</title>
   <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
   <style>
@@ -41,17 +41,14 @@
 
   <select id="dashChannelSelector" style="display: none;"></select>
 
-  <!-- DASH PLAYER -->
   <div id="dashPlayer" class="player-wrapper">
     <video id="videoPlayer" controls autoplay muted></video>
   </div>
 
-  <!-- YOUTUBE PLAYER -->
   <div id="youtubePlayer" class="player-wrapper">
-    <iframe id="ytIframe" width="800" height="450" src="" frameborder="0" allowfullscreen></iframe>
+    <iframe id="ytIframe" width="800" height="450" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <!-- MP3 PLAYER -->
   <div id="mp3Player" class="player-wrapper">
     <audio id="mp3Audio" controls autoplay></audio>
     <br>
@@ -59,170 +56,172 @@
   </div>
 
 <script>
-  const dashChannels = [
-    {
-      name: "Kapamilya HD",
-      manifest: "https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-kapcha-dash-abscbnono/index.mpd",
-      drm: {
-        type: "clearkey",
-        keyId: "bd17afb5dc9648a39be79ee3634dd4b8",
-        key: "3ecf305d54a7729299b93a3d69c02ea5"
-      }
-    },
-   {
+const CONVRG_LICENSE_URI = 'https://example.com/license'; // Replace with real Widevine URL
+
+const dashChannels = [
+  {
+    name: "Kapamilya HD",
+    manifest: "https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-kapcha-dash-abscbnono/index.mpd",
+    drm: {
+      type: "clearkey",
+      keyId: "bd17afb5dc9648a39be79ee3634dd4b8",
+      key: "3ecf305d54a7729299b93a3d69c02ea5"
+    }
+  },
+  {
     name: "Cartoon Network HD",
-    manifest: 'https://qp-pldt-live-grp-12-prod.akamaized.net/out/u/dr_cartoonnetworkhd.mpd',
-    image: 'https://static.wikia.nocookie.net/logopedia/images/d/d9/Cartoon_Network_2010.svg/revision/latest?cb=20200617213702',
+    manifest: "https://qp-pldt-live-grp-12-prod.akamaized.net/out/u/dr_cartoonnetworkhd.mpd",
     drm: {
-        type: 'clearkey',
-        keyId: 'a2d1f552ff9541558b3296b5a932136b',
-        key: 'cdd48fa884dc0c3a3f85aeebca13d444'
+      type: "clearkey",
+      keyId: "a2d1f552ff9541558b3296b5a932136b",
+      key: "cdd48fa884dc0c3a3f85aeebca13d444"
     }
-}, // Example Image URL
-{
+  },
+  {
     name: "Cinemo",
-    manifest: 'https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-cinemo-dash-abscbnono/f1da36ea-047e-4262-9e45-9326d0e2930b/index.mpd',
+    manifest: "https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-cinemo-dash-abscbnono/f1da36ea-047e-4262-9e45-9326d0e2930b/index.mpd",
     drm: {
-        type: 'clearkey',
-        keyId: 'aa8aebe35ccc4541b7ce6292efcb1bfb',
-        key: 'aab1df109d22fc5d7e3ec121ddf24e5f'
+      type: "clearkey",
+      keyId: "aa8aebe35ccc4541b7ce6292efcb1bfb",
+      key: "aab1df109d22fc5d7e3ec121ddf24e5f"
     }
-}, {
+  },
+  {
     name: "Cinema One",
-    manifest: 'https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-cinemaone-dash-abscbnono/index.mpd',
+    manifest: "https://amagivercel.vercel.app/api/proxy?url=https://cdn-ue1-prod.tsv2.amagi.tv/linear/amg01006-abs-cbn-cinemaone-dash-abscbnono/index.mpd",
     drm: {
-        type: 'clearkey',
-        keyId: '58d0e56991194043b8fb82feb4db7276',
-        key: 'd68f41b59649676788889e19fb10d22c'
+      type: "clearkey",
+      keyId: "58d0e56991194043b8fb82feb4db7276",
+      key: "d68f41b59649676788889e19fb10d22c"
     }
-}, {
+  },
+  {
     name: "GMA 7",
-    manifest: 'https://proxy.nathcreqtives.com/api/manifest/1093.mpd',
+    manifest: "https://proxy.nathcreqtives.com/api/manifest/1093.mpd",
     drm: {
-        type: 'widevine',
-        licenseUri: CONVRG_LICENSE_URI
-    },
-    image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/GMA_Network_logo.svg/1200px-GMA_Network_logo.svg.png'
-}, // Example Image URL
-{
+      type: "widevine",
+      licenseUri: CONVRG_LICENSE_URI
+    }
+  },
+  {
     name: "GTV (CON)",
-    manifest: 'https://proxy.nathcreqtives.com/api/manifest/1164.mpd',
+    manifest: "https://proxy.nathcreqtives.com/api/manifest/1164.mpd",
     drm: {
-        type: 'widevine',
-        licenseUri: CONVRG_LICENSE_URI
+      type: "widevine",
+      licenseUri: CONVRG_LICENSE_URI
     }
-}, {
+  },
+  {
     name: "Jeepney TV (CON)",
-    manifest: 'https://proxy.nathcreqtives.com/api/manifest/1250.mpd',
+    manifest: "https://proxy.nathcreqtives.com/api/manifest/1250.mpd",
     drm: {
-        type: 'widevine',
-        licenseUri: CONVRG_LICENSE_URI
-    }
-    
-  ];
-
-  const ytQueue = [
-    "https://www.youtube.com/embed/jfKfPfyJRdk",
-    "https://www.youtube.com/embed/5qap5aO4i9A"
-  ];
-
-  const mp3Files = [
-    "/music/song1.mp3",
-    "/music/song2.mp3"
-  ];
-
-  let currentYT = parseInt(localStorage.getItem("ytIndex")) || 0;
-  let currentMP3 = parseInt(localStorage.getItem("mp3Index")) || 0;
-  let currentDASH = parseInt(localStorage.getItem("dashIndex")) || 0;
-
-  const dashPlayer = dashjs.MediaPlayer().create();
-  const switcher = document.getElementById("modeSwitcher");
-  const dashDiv = document.getElementById("dashPlayer");
-  const ytDiv = document.getElementById("youtubePlayer");
-  const mp3Div = document.getElementById("mp3Player");
-  const dashSelector = document.getElementById("dashChannelSelector");
-
-  // Populate DASH channel selector
-  dashChannels.forEach((ch, i) => {
-    const opt = document.createElement("option");
-    opt.value = i;
-    opt.textContent = ch.name;
-    dashSelector.appendChild(opt);
-  });
-
-  function switchMode(mode) {
-    dashDiv.style.display = "none";
-    ytDiv.style.display = "none";
-    mp3Div.style.display = "none";
-    dashSelector.style.display = "none";
-
-    localStorage.setItem("lastMode", mode);
-
-    if (mode === "dash") {
-      dashDiv.style.display = "block";
-      dashSelector.style.display = "inline-block";
-      loadDASH(currentDASH);
-    } else if (mode === "youtube") {
-      ytDiv.style.display = "block";
-      document.getElementById("ytIframe").src = ytQueue[currentYT];
-      localStorage.setItem("ytIndex", currentYT);
-    } else if (mode === "mp3") {
-      mp3Div.style.display = "block";
-      document.getElementById("mp3Audio").src = mp3Files[currentMP3];
-      localStorage.setItem("mp3Index", currentMP3);
+      type: "widevine",
+      licenseUri: CONVRG_LICENSE_URI
     }
   }
+];
 
-  function loadDASH(index) {
-    currentDASH = index;
-    localStorage.setItem("dashIndex", index);
+const ytQueue = [
+  "https://www.youtube.com/embed/jfKfPfyJRdk",
+  "https://www.youtube.com/embed/5qap5aO4i9A"
+];
 
-    const video = document.getElementById("videoPlayer");
-    video.pause();
-    video.src = ""; // clear
+const mp3Files = [
+  "/music/song1.mp3",
+  "/music/song2.mp3"
+];
 
-    const selected = dashChannels[index];
-    dashPlayer.reset();
-    dashPlayer.initialize(video, null, true);
+let currentYT = parseInt(localStorage.getItem("ytIndex")) || 0;
+let currentMP3 = parseInt(localStorage.getItem("mp3Index")) || 0;
+let currentDASH = parseInt(localStorage.getItem("dashIndex")) || 0;
 
-    if (selected.drm) {
-      dashPlayer.setProtectionData({
-        "org.w3.clearkey": {
-          clearkeys: {
-            [selected.drm.keyId]: selected.drm.key
-          }
-        }
-      });
-    }
+const dashPlayer = dashjs.MediaPlayer().create();
+const switcher = document.getElementById("modeSwitcher");
+const dashDiv = document.getElementById("dashPlayer");
+const ytDiv = document.getElementById("youtubePlayer");
+const mp3Div = document.getElementById("mp3Player");
+const dashSelector = document.getElementById("dashChannelSelector");
 
-    dashPlayer.attachSource(selected.manifest);
-  }
+// Populate DASH selector
+dashChannels.forEach((ch, i) => {
+  const opt = document.createElement("option");
+  opt.value = i;
+  opt.textContent = ch.name;
+  dashSelector.appendChild(opt);
+});
 
-  function playNextMp3() {
-    currentMP3 = (currentMP3 + 1) % mp3Files.length;
+function switchMode(mode) {
+  dashDiv.style.display = "none";
+  ytDiv.style.display = "none";
+  mp3Div.style.display = "none";
+  dashSelector.style.display = "none";
+  localStorage.setItem("lastMode", mode);
+
+  if (mode === "dash") {
+    dashDiv.style.display = "block";
+    dashSelector.style.display = "inline-block";
+    loadDASH(currentDASH);
+  } else if (mode === "youtube") {
+    ytDiv.style.display = "block";
+    document.getElementById("ytIframe").src = ytQueue[currentYT];
+    localStorage.setItem("ytIndex", currentYT);
+  } else if (mode === "mp3") {
+    mp3Div.style.display = "block";
     document.getElementById("mp3Audio").src = mp3Files[currentMP3];
     localStorage.setItem("mp3Index", currentMP3);
   }
+}
 
-  switcher.addEventListener("change", () => {
-    switchMode(switcher.value);
-  });
+function loadDASH(index) {
+  currentDASH = index;
+  localStorage.setItem("dashIndex", index);
+  const selected = dashChannels[index];
+  const video = document.getElementById("videoPlayer");
 
-  dashSelector.addEventListener("change", () => {
-    loadDASH(parseInt(dashSelector.value));
-  });
+  video.pause();
+  video.src = "";
+  dashPlayer.reset();
 
-  // Initial load
-  switcher.value = localStorage.getItem("lastMode") || "dash";
-  dashSelector.value = currentDASH;
-  switchMode(switcher.value);
+  dashPlayer.initialize(video, null, true);
 
-  // Service Worker
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('✅ Service Worker registered:', reg.scope))
-      .catch(err => console.warn('❌ Service Worker error:', err));
+  if (selected.drm?.type === "clearkey") {
+    dashPlayer.setProtectionData({
+      "org.w3.clearkey": {
+        clearkeys: {
+          [selected.drm.keyId]: selected.drm.key
+        }
+      }
+    });
   }
+
+  dashPlayer.attachSource(selected.manifest);
+}
+
+function playNextMp3() {
+  currentMP3 = (currentMP3 + 1) % mp3Files.length;
+  document.getElementById("mp3Audio").src = mp3Files[currentMP3];
+  localStorage.setItem("mp3Index", currentMP3);
+}
+
+switcher.addEventListener("change", () => {
+  switchMode(switcher.value);
+});
+
+dashSelector.addEventListener("change", () => {
+  loadDASH(parseInt(dashSelector.value));
+});
+
+// Initial Load
+switcher.value = localStorage.getItem("lastMode") || "dash";
+dashSelector.value = currentDASH;
+switchMode(switcher.value);
+
+// Service Worker registration
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(reg => console.log('✅ Service Worker registered:', reg.scope))
+    .catch(err => console.warn('❌ Service Worker error:', err));
+}
 </script>
 
 </body>
